make sure links wrap fully instead of cutting on white space.

--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -1026,6 +1026,11 @@ label {
 	margin-bottom: 2em;
 }
 
+.wrap-full
+{
+    white-space: pre;
+}
+
 #countdown
 {
 	margin: 3rem;
